examples/test/testpolicy14278.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14278
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key46: value1
      key5: value37
      key49: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value44
          key27: value37
      podSelector:
        matchLabels:
          key34: value5
          key25: value26
